# rust-dine

./: .env  Cargo.toml  README  assets.toml  aws.sh  example.json
frontend/: package.json
frontend/public/: index.html
frontend/src/: App copy.css  App.js  index.js  my_great_place.jsx  simple.js
frontend/src/flux/components/examples/x_main/: main_map_block.jsx
frontend3/: build.sh  nginx.conf  package.json
frontend3/public/: index.html
frontend3/src/: App.css  App.js  basic.js
migrations/20170101051730_create_inspection/: down.sql  up.sql
migrations/20170101225403_create_places/: down.sql  up.sql
migrations/20170104063746_create_violations/: down.sql  up.sql
migrations/20170116223405_AddColForLastInspection/: up.sql
public/: gmap.js  place_map.js
public/css/: index.css
public/static/css/: main.9a0fe4f1.css  main.css
public/static/js/: main.2b001088.js  main.2b001088.js.map  main.e0ef652f.js  main.e0ef652f.js.map  main.js
scrapper/: Cargo.toml  single.xml
scrapper/src/: error.rs  main.rs  models.rs
src/: assets.rs  cors.rs  main.rs  models.rs  schema.rs  static_files.rs
templates/: index.html.tera
