[package]
name = "dine"
version = "0.1.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]

[dependencies]
lazy_static = "*"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
rocket = "0.1"
rocket_codegen = "0.1"
diesel = { version = "0.9.0", features = ["postgres", "chrono"] }
r2d2_postgres = "*"
r2d2-diesel = "*"
r2d2 = "*"
postgres = "*"
chrono = {version = "*", features = ["serde"]}
diesel_codegen = { version = "0.9.0", features = ["postgres" ] }
dotenv = "0.8.0"
tera = "*"
glob = "*"
toml = { version = "0.2", features = ["serde"], default-features = false }
[dependencies.rocket_contrib]
version = "0.1.2"
default_features = false
features = [ "json", "tera_templates" ]
