[package]
name = "scrapper"
version = "0.1.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>"]

[dependencies]
lazy_static = "*"
serde = "0.8"
serde_derive = "0.8"
serde_xml = {git="https://github.com/serde-rs/xml.git"}
diesel = { version = "0.9.0", features = ["postgres", "chrono"] }
chrono = {version = "*", features = ["serde"]}
diesel_codegen = { version = "0.9.0", features = ["postgres" ] }
dotenv = "0.8.0"

